# rain_sensing_wipers

./: AI_RECREATION_PROMPTS.md  AutomatedTests.cpp  CMakeLists.txt  ColorUtilities.cpp  ColorUtilities.h  Makefile  MethodUsageMap.txt  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RainSensor.cpp  RainSensor.h  TEST_CASES.md  TEST_RESULTS_TEMPLATE.md  WindshieldWiperController.cpp  WindshieldWiperController.h  WiperEnums.cpp  WiperEnums.h  WiperSystemManager.cpp  WiperSystemManager.h  build.bat  main.cpp  run_automated_tests.bat  sert(controller.mapLightPercentageToWiperSpeed(75.0) == WindshieldWiperSpeedLOW);
